--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -413,5 +413,6 @@
   - Susan K. Pierce
   - Munir Akkaya
   publisher: mBio
+  image: https://journals.asm.org/cms/10.1128/mbio.03391-22/asset/3b620679-8f49-493e-ab9f-1d37b44dceb3/assets/images/medium/mbio.03391-22-f001.gif
   date: '2023-02-28'
   link: https://doi.org/10.1128/mbio.03391-22
